--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.85.6",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.344.0",
+    "mysql2": "^3.14.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
